# dyros_robot_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: teleop_twist_joy.yaml
drc/: type_define.py
drc/manipulator/: robot_controller.py
drc/mobile/: robot_controller.py  robot_data.py
drc/mobile_manipulator/: robot_controller.py  robot_data.py
dyros_robot_controller/: __init__.py  type_define.py  utils.py
dyros_robot_controller/fr3_controller/: controller.py  robot_data.py  ros2_qt_gui.py
dyros_robot_controller/husky_controller/: controller.py
dyros_robot_controller/husky_fr3_controller/: controller.py  robot_data.py  ros2_qt_gui.py
dyros_robot_controller/manipulator/: robot_controller.py  robot_data.py
dyros_robot_controller/mobile/: robot_data.py
dyros_robot_controller/mobile_manipulator/: robot_controller.py  robot_data.py
dyros_robot_controller/pcv_controller/: controller.py
dyros_robot_controller/pcv_fr3_controller/: ros2_qt_gui.py
dyros_robot_controller/robot_controller/: __init__.py
dyros_robot_controller/robot_controller/manipulator/: base.py
dyros_robot_controller/robot_controller/mobile/: base.py
dyros_robot_controller/robot_controller/mobile_manipulator/: base.py
dyros_robot_controller/robot_data/: __init__.py
dyros_robot_controller/robot_data/manipulator/: base.py
dyros_robot_controller/robot_data/mobile/: base.py
dyros_robot_controller/robot_data/mobile_manipulator/: base.py
dyros_robot_controller/ur5e_controller/: controller.py  ros2_qt_gui.py
dyros_robot_controller/xls_controller/: controller.py
dyros_robot_controller/xls_fr3_controller/: ros2_qt_gui.py
examples/: README.md  fr3_controller.py  mujoco_bridge.py  xls_controller.py
examples/C++/: CMakeLists.txt
examples/C++/include/: fr3_controller.hpp  mujoco_bridge.hpp  xls_controller.hpp
examples/C++/src/: fr3_controller.cpp  xls_controller.cpp
examples/C++/src/mujoco/: simulate.cc
examples/python/: fr3_controller.py  xls_controller.py
fr3_controller/: CMakeLists.txt
fr3_controller/fr3_controller/: controller.py  robot_data.py  utils.py
fr3_controller/include/fr3_controller/: passive_controller.h  robot_data.h
fr3_controller/src/: bindings.cpp  passive_controller.cpp  robot_data.cpp
include/: math_type_define.h
include/QP/: QP_base.h  QP_moma_wholebody.h  base.h  manipulator_ID.h  manipulator_IK.h  mobile_manipulator_ID.h  mobile_manipulator_IK.h
include/dyros_robot_controller/: QP_base.h
include/dyros_robot_controller/manipulator/: QP_ID.h  QP_IK.h  robot_controller.h  robot_data.h
include/dyros_robot_controller/mobile/: robot_controller.h  robot_data.h
include/dyros_robot_controller/mobile_manipulator/: QP_ID.h  QP_IK.h  robot_controller.h  robot_data.h
include/fr3_controller/: controller.h  robot_data.h
include/husky_fr3_controller/: controller.h  robot_data.h
include/pcv_fr3_controller/: controller.h  robot_data.h
include/robot_controller/manipulator/: base.h
include/robot_controller/mobile/: base.h
include/robot_controller/mobile_manipulator/: base.h
include/robot_data/: manipulator.h  mobile_manipulator.h  robot_data_base.h  type_define.h
include/robot_data/manipulator/: base.h
include/robot_data/mobile/: base.h
include/robot_data/mobile_manipulator/: base.h
include/xls_fr3_controller/: controller.h  robot_data.h
launch/: fr3_controller.launch.py  fr3_rviz.rviz  husky_controller.launch.py  husky_fr3_controller.launch.py  husky_fr3_rviz.rviz  pcv_controller.launch.py  pcv_fr3_controller.launch.py  pcv_fr3_rviz.rviz  ur5e_controller.launch.py  ur5e_rviz.rviz  xls_controller.launch.py  xls_fr3_controller.launch.py  xls_fr3_rviz.rviz
robot/: husky.urdf  husky_fr3.srdf  husky_fr3.urdf  pcv_fr3.srdf  pcv_fr3.urdf  ur5e.urdf  xls_fr3.srdf  xls_fr3.urdf
src/: bindings.cpp
src/QP/: QP_base.cpp  QP_moma_wholbody.cpp  QP_moma_wholebody.cpp  base.cpp  manipulator_ID.cpp  manipulator_IK.cpp  mobile_manipulator_ID.cpp  mobile_manipulator_IK.cpp
src/fr3_controller/: controller.cpp  robot_data.cpp
src/husky_fr3_controller/: controller.cpp  robot_data.cpp
src/manipulator/: robot_controller.cpp  robot_data.cpp
src/mobile_manipulator/: robot_controller.cpp  robot_data.cpp
src/pcv_fr3_controller/: controller.cpp  robot_data.cpp
src/robot_controller/manipulator/: base.cpp
src/robot_controller/mobile/: base.cpp
src/robot_controller/mobile_manipulator/: base.cpp
src/robot_data/: manipulator.cpp  mobile_manipulator.cpp  robot_data_base.cpp
src/robot_data/manipulator/: base.cpp
src/robot_data/mobile/: base.cpp
src/robot_data/mobile_manipulator/: base.cpp
src/xls_fr3_controller/: controller.cpp  robot_data.cpp
