<package format="2">
  <name>dyros_robot_controller</name>
  <version>0.3.0</version>
  <description>Robot controller with C++ and Python interface.</description>
  <maintainer email="yoonjh98@snu.ac.kr">Yoon Junheon</maintainer>
  <license>Apache License 2.0</license>

  <!--  Buildtool  -->
  <buildtool_depend>catkin</buildtool_depend>

  <!--  Build dependencies  -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!--  Exported build dependencies  -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <!--  Execution dependencies  -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!--  Third-party libraries  -->
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <depend>OsqpEigen</depend>
  <depend>eigenpy</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
